--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.2.4",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
@@ -26,8 +27,10 @@
     "@ngrx/store": "^2.2.2",
     "@ngrx/store-devtools": "^3.2.4",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "ngrx-store-freeze": "^0.1.9",
+    "primeng": "^4.1.0-rc.2",
     "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
