--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.7",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -27,10 +28,9 @@
     "@ngrx/store": "^2.2.2",
     "@ngrx/store-devtools": "^3.2.4",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "ngrx-store-freeze": "^0.1.9",
-    "primeng": "^4.1.0-rc.2",
     "reselect": "^3.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
